--- a/Charlie/style.css
+++ b/Charlie/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: trebuchet ms;
     /*background-color: #b8c3c2;*/
-    background-image: url(img/content-bg.jpg);
+    background-image: url(img/c.jpg);
 }
 
 a {
