--- a/Charlie/style.css
+++ b/Charlie/style.css
@@ -2,8 +2,9 @@ body {
     font-family: trebuchet ms;
     /*background-color: #b8c3c2;*/
     background-image: url(img/c.jpg);
-    background-repeat: no-repeat;
-    background-position: center center;
+    background-repeat:no-repeat;
+    background-attachment:fixed;
+    background-position:center; 
 }
 
 a {
