--- a/Charlie/style.css
+++ b/Charlie/style.css
@@ -3,7 +3,7 @@ body {
     /*background-color: #b8c3c2;*/
     background-image: url(img/c.jpg);
     background-repeat:no-repeat;
-    background-position: center center;
+    background-position: center;
 }
 
 a {
