--- a/Charlie/style.css
+++ b/Charlie/style.css
@@ -1,9 +1,10 @@
 body {
     font-family: trebuchet ms;
     /*background-color: #b8c3c2;*/
-    background-image: url(img/c.jpg);
+    background-image: url('img/c.jpg');
     background-repeat:no-repeat;
-    background-position: center;
+    background-attachment:fixed;
+    background-position:center; 
 }
 
 a {
