--- a/Charlie/style.css
+++ b/Charlie/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: trebuchet ms;
+    font-family: "Trebuchet MS";
     /*background-color: #b8c3c2;*/
     background-image: url('img/c.jpg');
     background-repeat:no-repeat;
