--- a/Charlie/style.css
+++ b/Charlie/style.css
@@ -2,6 +2,7 @@ body {
     font-family: "Trebuchet MS";
     /*background-color: #b8c3c2;*/
     background-image: url('img/c.jpg');
+    background-size: 100%;
 }
 
 a {
